--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,7 +30,7 @@
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
             rel="stylesheet"
     />
-    <title>The Scrum Book</title>
+    <title>A Scrum Book</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
