--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="#000000" name="theme-color"/>
     <meta
-            content="Web site created using create-react-app"
+            content="This app is inspired in a book (A Scrum book: The Spirit of the Game) about Scrum - a simple but powerful way for people to work together."
             name="description"
     />
     <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon"/>
